Minor edit in alt

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -22,13 +22,13 @@
             </article>
             <article>
                 <h2>Why do developers need Git?</h2>
-                <img class="img" src="https://razorops.com/images/blog/Advantages-of-Git.png" alt="teamwork by Git">
+                <img class="img" src="https://razorops.com/images/blog/Advantages-of-Git.png" alt="Git's benefits">
                 <p>Developers need Git because it provides essential tools to manage code effectively, especially when working in teams or on complex projects.</p>
                 <a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" class="read-more">Read More</a>
             </article>
             <article>
                 <h2>What is a branch in Git?</h2>
-                <img class="img" src="https://www.nobledesktop.com/image/blog/git-branches-merge.png" alt="view of Shiraz">
+                <img class="img" src="https://www.nobledesktop.com/image/blog/git-branches-merge.png" alt="teamwork by Git">
                 <p>A branch in Git is like a separate line of development that allows developers to work on a specific part of a project independently from the main codebase, known as the main or master branch. This feature is essential for collaboration and experimentation.</p>
                 <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" class="read-more">Read More</a>
             </article>
