--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -50,7 +50,7 @@
       </div>
       <div>
         <label for="delivery date">Choose your delivery date</label>
-        <input type="date" name="date" id="date" min="2024-10-31" max="2024-11-30">
+        <input type="date" name="date" id="delivery date" min="2024-10-31" max="2024-11-30">
     </div>
       <button type="reset">Reset</button>
       <button type="submit">Submit</button>
