Lower case label

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -38,7 +38,7 @@
         </div>
         Choose your T-shirt's Size
         <div>
-          <Label for="Size">T-shirt's Size</label>
+          <label for="Size">T-shirt's Size</label>
           <select name="Size" id="Size" required>
               <option value="XS">XS</option>
               <option value="S">S</option>
