--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,55 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
-      <nav>
-        <h2>Big G</h2>
-        <div id="nav-link">
-          <a href="#">Home</a>
-          <a href="#">Definitions</a>
-          <a href="#">Explanations</a>
-        </div>
-      </nav>
+      <h1>Git and Github</h1>
+      <h3>Below is a brief description of what Git is and why it is important in programming.</h3>
     </header>
     <main>
       <section id="content">
         <article>
+          <div>
+              <img src="Images/istockphoto-1280235680-612x612.jpg" alt="">
+            </div>
+              <h2>Git</h2>
             <details id="git-definition">
               <summary>What is Git?</summary>
               <p class="summa">
                 Git is a version control system that tracks changes to files over time, making it ideal for collaborative projects. It allows developers to create branches for different features, merge changes seamlessly, and revert to previous versions if necessary. Its distributed nature ensures efficient workflows, even when working remotely.
               </p>
-              <button><a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F">Read more</a></button>
             </details>
-            <p class="more-about">It's primarily used for software development, but can also be used to track changes to any set of files. Git's distributed nature allows each developer to have a full copy of the repository, enabling offline work and local branching. Branching and merging features in Git make it easy to work on different features or bug fixes without affecting the main codebase. Git's staging area allows developers to review and select changes before committing them to the repository, while commits create snapshots of the repository at specific points in time. Git is essential for version control, collaboration, backup, and experimentation, providing a powerful tool for developers of all levels.</p>
+            <button><a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F">Read more</a></button>
         </article>
-        <div id="other-parts">
-          <article>
-            <details id="developers">
-              <summary>Why do developers need Git?</summary>
-              <p class="summa">
-                Developers need Git to efficiently manage and collaborate on projects. It provides a robust system for tracking changes, creating and merging branches, and reverting to previous versions. This is especially crucial in large-scale projects with multiple contributors, as Git helps prevent conflicts and ensures that everyone is working on the latest version of the code. Additionally, Git's distributed nature allows developers to work independently and then synchronize their changes, making it ideal for remote teams.
-              </p>
+          <div id="summary-section">
+            <article>
+              <div>
+                  <img src="Images/istockphoto-531467512-612x612.jpg" alt="">
+                </div>
+                <h2>Importance of Git</h2>
+              <details id="developers">
+                <summary>Why do developers need Git?</summary>
+                <p class="summa">
+                  Developers need Git to efficiently manage and collaborate on projects. It provides a robust system for tracking changes, creating and merging branches, and reverting to previous versions. This is especially crucial in large-scale projects with multiple contributors, as Git helps prevent conflicts and ensures that everyone is working on the latest version of the code. Additionally, Git's distributed nature allows developers to work independently and then synchronize their changes, making it ideal for remote teams.
+                </p>
+              </details>
               <button><a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in.">Read more</a></button>
-            </details>
-            <p class="more-about">
-              Git is an essential tool for developers because it enables effective version control, collaboration, backup, experimentation, and participation in open-source projects. It allows developers to track changes to their code over time, work together on projects, protect their work from accidental loss, try out new ideas without affecting the main codebase, and contribute to open-source communities.
-            </p>
-          </article>
-          <article>
-            <details id="branches">
-              <summary>What is a branch in Git?</summary>
-              <p class="summa">
-                A branch in Git is like a parallel version of your project. It allows you to create a separate working environment where you can make changes without affecting the main codebase. This is useful for experimenting with new features, fixing bugs, or working on different tasks simultaneously. Once you're satisfied with your changes, you can merge the branch back into the main branch. This helps to keep your code organized and prevents conflicts between different features or bug fixes.
-              </p>
+            </article>
+            <article>
+              <div>
+                <img src="Images/png-transparent-git-hd-logo.png" alt="">
+              </div>
+              <h2>Git Branches</h2>
+              <details id="branches">
+                <summary>What is a branch in Git?</summary>
+                <p class="summa">
+                  A branch in Git is like a parallel version of your project. It allows you to create a separate working environment where you can make changes without affecting the main codebase. This is useful for experimenting with new features, fixing bugs, or working on different tasks simultaneously. Once you're satisfied with your changes, you can merge the branch back into the main branch. This helps to keep your code organized and prevents conflicts between different features or bug fixes.
+                </p>
+              </details>
               <button><a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell">Read more</a></button>
-            </details>
-            <p class="more-about">A Git branch is a separate copy of a repository that allows developers to work on different parts of a project without affecting the main codebase. This helps prevent conflicts and makes it easier to collaborate. Branches are useful for creating new features, fixing bugs, or experimenting with different approaches.</p>
-          </article>
-        </div>
+            </article>
+          </div>
       </section>
     </main>
     <footer>
