add some css and a comment in html

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -15,6 +15,7 @@
       </header>
 
       <main>
+        <!-- Articles Section -->
         <section>
           <article>
             <title>A Hub for Developers to Collaborate and Share Code</title>
