--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,15 +15,15 @@
   <main>
   <form id="orderForm" onsubmit="return validateForm()">
     <label for="name">Full Name:</label>
-    <input type="text" id="name" name="name">
+    <input type="text" id="name" name="name" pattern="[A-Za-z]{2-32} {-}" required>
     <div id="nameError" class="error"></div>
 
     <label for="email">Email Address:</label>
-    <input type="email" id="email" name="email">
+    <input type="email" id="email" name="email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+" required>
     <div id="emailError" class="error"></div>
 
     <label>Colour:</label>
-    <input type="radio" id="red" name="colour" value="Red">
+    <input type="radio" id="red" name="colour" value="Red" checked>
     <label for="red">Red</label>
     <input type="radio" id="blue" name="colour" value="Blue">
     <label for="blue">Blue</label>
@@ -44,7 +44,7 @@
     <div id="sizeError" class="error"></div>
 
     <label for="deliveryDate">Delivery Date:</label>
-    <input type="date" id="deliveryDate" name="deliveryDate">
+    <input type="date" id="deliveryDate" name="deliveryDate" min='2024-11-02' max='2024-12-02' required>
     <div id="dateError" class="error"></div>
 
     <button type="submit">Submit Order</button>
