change in button and fixed the wrong folder

--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -25,7 +25,7 @@
             <a href="">About</a>
           </nav>
         </aside>
-        <p class="motto-p">The most delicious cakes in town delivered to your door</p>
+        <p class="motto-p">The best cakes in town delivered to your door</p>
       </div>
     </header>
     <!-- main -->
