--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,23 +18,24 @@
         <!-- Articles Section -->
         <section>
           <article>
-            <title>A Hub for Developers to Collaborate and Share Code</title>
+            <h2>A Hub for Developers to Collaborate and Share Code</h2>
             <img src="images/GitHub-1.jpg" alt="">
             <p>GitHub is one of the most popular platforms for software development, providing a space where millions of developers around the world collaborate on projects, share code, and contribute to open-source communities. Founded in 2008 and acquired by Microsoft in 2018, GitHub offers a version control system that is built around Git, a distributed system created by Linus Torvalds, the developer of the Linux operating system.</p>
             <button><a href="https://docs.github.com/en/get-started/start-your-journey/about-github-and-git">Read More...</a></button>
           </article>
           <article>
-            <title>GitHub for Beginners: A Step-by-Step Guide to Getting Started</title>
+            <h2>GitHub for Beginners: A Step-by-Step Guide to Getting Started</h2>
             <p>For many newcomers, GitHub can seem like an intimidating platform filled with complex terminologies like "repositories," "forks," and "pull requests." However, once you understand the basics, GitHub becomes an incredibly powerful tool for both solo projects and team collaborations. This guide will walk you through the first steps of using GitHub, from setting up an account to making your first contribution.</p>
             <button><a href="https://docs.github.com/en/get-started/start-your-journey/about-github-and-git">Read More...</a></button>
           </article>
           <article>
-            <title>The Role of GitHub in Open-Source Development</title>
+            <h2>The Role of GitHub in Open-Source Development</h2>
             <p>Open-source software has revolutionized the way technology is developed and shared. GitHub plays a central role in this movement, serving as the largest platform for hosting and contributing to open-source projects. GitHub empowers developers to collaborate on code, share knowledge, and build innovative solutions across a variety of fields.</p>
+            <button><a href="https://docs.github.com/en/get-started/start-your-journey/about-github-and-git">Read More...</a></button>
           </article>
-          <button><a href="https://docs.github.com/en/get-started/start-your-journey/about-github-and-git">Read More...</a></button>
         </section>
       </main>
+      
 
       <footer>
         <p>GitHub empowers developers to collaborate, share, and build innovative projects together.</p>
