chnaged the wording for the attribute tag and removed the colon. Html section background colour has been changed from aqua to f5e8e9 and first picture class has colour chnaged from darkblue to whitesmoke. .col colour changed from red to whitesmoke and border changed from 2px to 5px

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -36,7 +36,7 @@
 
        </p>
        <button class="btn">
-        <a href=" https://www.youtube.com/watch?v=9lfgB0vxYco">Click here for more information:</a>
+        <a href=" https://www.youtube.com/watch?v=9lfgB0vxYco">Click here for more information</a>
        </button>
        </div>
        </div>
@@ -50,7 +50,7 @@
       A Git branch is a separate development line that lets developers work on features or fixes independently. It enables parallel tasks and can be merged back into the main branch for organization and collaboration.
     </p>
     <button class="btn">
-    <a href="https://www.w3schools.com/git/git_branch.asp" class="btn">To find more information: </a>
+    <a href="https://www.w3schools.com/git/git_branch.asp" class="btn">Click here for more information</a>
     </button>
       </div>
       </div>
