add form control index and css and checklist

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -3,25 +3,66 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
+  <title>T-Shirt Order Form</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Product Pick</h1>
+    <h1>T-Shirt Order Form</h1>
   </header>
   <main>
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+    <h2>T-Shirt Order Form</h2>
+
+    <!-- Customer's Name -->
+    <label for="name">Full Name:</label>
+    <input type="text" id="name" name="name" required pattern="[A-Za-z\s]{2,}" title="Name should be at least 2 characters." class="input-field">
+
+    <!-- Customer's Email -->
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required class="input-field">
+
+    <!-- T-Shirt Colour -->
+    <label for="colour">T-Shirt Colour:</label>
+    <select id="colour" name="colour" required class="input-field">
+        <option value="">-- Select Colour --</option>
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+        <option value="green">Green</option>
+    </select>
+
+    <!-- T-Shirt Size -->
+    <label for="size">T-Shirt Size:</label>
+    <select id="size" name="size" required class="input-field">
+        <option value="">-- Select Size --</option>
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+    </select>
+
+    <!-- Delivery Date -->
+    <label for="delivery">Delivery Date:</label>
+    <input type="date" id="delivery" name="delivery" required min="" max="" class="input-field">
+
+    <!-- Submit Button -->
+     <div class="button-order">
+        <input type="submit" value="Submit Order">
+
+     </div>
+
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>Phone Myint Naing</h2>
   </footer>
 </body>
 
