--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,7 +16,7 @@
   <form action="results.html" method="get">
     <div>
       <label for="name">Name <span>*</span></label>
-      <input type="text" placeholder="Your Name" name="Name" id="name" pattern="^[A-Za-zÀ-ÖØ-öø-ÿ' -]+$" minlength="2" required>
+      <input type="text" placeholder="Your Name" name="Name" id="name" minlength="2" required>
     </div>
     <div>
       <label for="email">Email <span>*</span></label>
