The updated wireframe project

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Understanding Git</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+  <h1>Understanding Git</h1>
+  <p>An introduction to Git, why it's essential for developers, and the concept of branches.</p>
+</header>
+
+<main class="articles">
+  <article>
+    <h2>What is Git?</h2>
+    <p>Git is a distributed version control system that helps developers manage and track changes to their code.</p>
+    <a href="https://www.geeksforgeeks.org/what-is-git-version-control/" target="_blank">Learn more</a>
+  </article>
+  
+  <article>
+    <h2>Why Do Developers Need Git?</h2>
+    <p>Git allows developers to collaborate, maintain versions, and backtrack changes efficiently.</p>
+    <a href="https://www.nobledesktop.com/learn/git/what-is-git" target = "-blank">Learn more</a>
+  </article>
+  
+  <article>
+    <h2>What is a Branch in Git?</h2>
+    <p>A branch in Git allows you to work on different parts of a project without affecting the main codebase.</p>
+    <a href="https://gitdeveloperguide.solomonmarvel.com/working-with-git/what-is-git-branch" target = "_blank">Learn more</a>
+  </article>
+</main>
+
+<footer>
+  <p>&copy; 2024 by Rahwa Zeslus. All Rights Reserved..</p>
+</footer>
+
 </body>
-</html
+</html>
