changed html section tags to article and styled the article and applied the first child pseudo class

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,7 +11,7 @@
           <h1>Getting to know your GIT</h1>
   </header>
   <main>
-    <section>
+    <article>
       <img class= "first-photo" src="./img/git.png" alt="git photo">
     <div class="col-content">
     <h2>
@@ -24,9 +24,9 @@
       <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F"> Click here for more information</a>
     </button>
     </div>
-   </section>
+   </article>
 
-     <section class="section-two">
+     <article class="article-two">
       <div class="col">
 
        <img src="./img/gitbranches.png" alt="image of a git flow diagram">
@@ -54,7 +54,7 @@
     </button>
       </div>
       </div>
-    </section>
+    </article>
   </main>
   <footer>
     <h5>
