--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -31,7 +31,7 @@
     <!-- main -->
     <main>
       <section class="p-sec">
-        <h1>Welcome</h1>
+        <h1>Welcome fatima</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
           voluptatem accusantium, necessitatibus cum accusamus, id cumque harum
