Write the requirements for the html form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,12 +16,21 @@
   <form>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
+     
+     <!-- make sure to take valid input for customer name and email id,
+          let the customer choose any one t-shirt colour by using drop down box,
+          select t-shirt size by using radio button and select delivery date by using 
+          date input box and make sure delivery date is within the next 4 weeks of current date.
+     -->
+
+  
+
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2> &copy; 2024 Chaitra's Tech Guide. All rights reserved.</h2>
   </footer>
 </body>
 
