HTML validator errors solved, page layout match wireframe

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,8 +18,8 @@
       </header>
       <main class="article">
         <article id="first">
+          <img id="git-img" src="../IMG/git.png" alt="">
             <h3>What is Git?</h3>
-            <img id="git-img" src="../IMG/git.png" alt="">
             <p>
               Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.
               It is used for: Tracking code changes, Tracking who made changes and Coding collaboration.
@@ -27,16 +27,16 @@
           <a class="btn" href="https://www.datacamp.com/blog/all-about-git" target="_blank" aria-label="Read more about what is git" title="www.datacamp.com">Read more about Git</a>
         </article>
         <article id="second">
-            <h3>Why do developers need Git?</h3>
-            <img src="../IMG/git for dev.jpeg" alt="Developers round Git logo">
-            <p>
-              Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
-            </p>
+          <img src="../IMG/git-for-dev.jpeg" alt="Developers round Git logo">
+          <h3>Why do developers need Git?</h3>
+          <p>
+            Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
+          </p>
           <a class="btn" href="https://www.atlassian.com/git/tutorials/why-git" target="_blank" aria-label="Read more about why developers need git" title="www.atlassian.com">Read more to find out</a>
         </article>
         <article id="third">
+          <img src="../IMG/Branch.webp" alt="">
             <h3>What is a branch in Git?</h3>
-            <img src="../IMG/Branch.webp" alt="">
             <p>
               Branches in Git allow developers to work independently, experiment, and manage their code in a structured way.
             </p>
@@ -44,8 +44,8 @@
         </article>
       </main>
       <footer>
-          <h4>&copy All Rights Reserved</h4>
+          <h4>&copy; All Rights Reserved</h4>
           <h5>Created by: <a href="https://github.com/PooriyaKTB">Pooriya</a></h5>
       </footer>
 </body>
-</html
+</html>
