--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,7 +18,7 @@
       </header>
       <main class="article">
         <article id="first">
-          <img id="git-img" src="../IMG/git.png" alt="">
+          <img id="git-img" src="../IMG/git.png" alt="Git logo">
             <h3>What is Git?</h3>
             <p>
               Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.
@@ -35,7 +35,7 @@
           <a class="btn" href="https://www.atlassian.com/git/tutorials/why-git" target="_blank" aria-label="Read more about why developers need git" title="www.atlassian.com">Read more to find out</a>
         </article>
         <article id="third">
-          <img src="../IMG/Branch.webp" alt="">
+          <img src="../IMG/Branch.webp" alt="Git branches">
             <h3>What is a branch in Git?</h3>
             <p>
               Branches in Git allow developers to work independently, experiment, and manage their code in a structured way.
