remove accidental {-} character from pattern

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,7 +15,7 @@
   <main>
   <form id="orderForm" onsubmit="return validateForm()">
     <label for="name">Full Name:</label>
-    <input type="text" id="name" name="name" pattern="[A-Za-z]{2-32} {-}" required>
+    <input type="text" id="name" name="name" pattern="[A-Za-z]{2-32}" required>
     <div id="nameError" class="error"></div>
 
     <label for="email">Email Address:</label>
